# From-Scratch-Database-Rust

./: .gitignore  Cargo.toml  README.md
src/: database_validators.rs  lib.rs  main.rs  table_functions.rs  table_validators.rs
src/database/: validators.rs
src/macros/: macros.rs
src/table/: crud.rs  data.rs  filters.rs  functions.rs  indexing.rs  io.rs  joins.rs  mod.rs  query.rs  schema.rs  transactions.rs  validators.rs
tests/: database_validators.rs  database_validators_test.rs  macros_macros.rs  table_crud.rs  table_functions_test.rs  table_validators_test.rs
