[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal input (REPL)
reedline = "0.24.0"         # or: rustyline = "13.0.0"

# CSV reading/writing
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# SQL parsing
sqlparser = "0.41"

# For error handling
thiserror = "1.0"

# For data types and date parsing
chrono = { version = "0.4", features = ["serde"] }

# Optional: for better table display
prettytable-rs = "0.10"     # or comfy-table = "7.1"

# Optional: colored terminal output
colored = "2.0"
